# toolcall-rescue

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: demo.py
tests/: test_rescue.py
toolcall_rescue/: __init__.py  _json5.py  cli.py  core.py
