[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolcall-rescue"
version = "0.1.0"
description = "Salvage tool/function calls that leaked into LLM message content as XML, dirty JSON, Hermes tags, or fullwidth-unicode markup."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "insomniac-asif" }]
keywords = ["llm", "tool-calls", "function-calling", "parser", "openai", "hermes", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/insomniac-asif/toolcall-rescue"
Repository = "https://github.com/insomniac-asif/toolcall-rescue"
Issues = "https://github.com/insomniac-asif/toolcall-rescue/issues"

[project.scripts]
toolcall-rescue = "toolcall_rescue.cli:main"

[tool.setuptools]
packages = ["toolcall_rescue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
